--- a/biography.html
+++ b/biography.html
@@ -4,6 +4,9 @@
 <head>
 <title>Biography - Oliver Zhang</title>
 <link rel="icon" type="image/png" href="images/favicon.png">
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <style>
     img {
       float: right;
@@ -31,12 +34,12 @@
       text-decoration: none;
     }
     a:hover {
-      color:rgb(178, 34, 32);
+      color:#b60500;
       background-color: transparent;
       text-decoration: none;
     }
     a:active {
-      color:rgb(178, 34, 32);
+      color:#b60500;
       background-color: transparent;
       text-decoration: none;
     }
@@ -66,10 +69,10 @@
       letter-spacing: 0px;
       font-size: 12px;
       text-align: left;
-      text-indent: 280px;
+      text-indent: 17.7rem;
       color: rgb(120, 120, 120)
     }
-    div.biography {
+    .biography {
         font-family: verdana;
         font-size: 0.89rem;
         color: rgb(64, 64, 64);
@@ -88,7 +91,7 @@
 <br>
 
 <h1>
-  <a style = "color:rgb(178, 34, 32);" href="index.html">OLIVER ZHANG</a>
+  <a style = "color:#b60500;" href="index.html">OLIVER ZHANG</a>
 </h1>
 
 <p>NEUROSCIENCE & TRUMPET PERFORMANCE, NORTHWESTERN UNIVERSITY</p>
@@ -98,7 +101,7 @@
 
 <div class="menu">
     <div>
-        <p class="menu"><a href="biography.html">BIOGRAPHY</a></p>
+        <p class="menu"><a href="biography.html" style="color:#b60500;">BIOGRAPHY</a></p>
     </div>
 
     <div>
@@ -120,7 +123,7 @@
 <br>
 <br>
 
-<img src=" images/296A9603.jpg" alt="oliver trumpet picture" width="313" height="460">
+<img src="images/296A9603.jpg" alt="oliver trumpet picture" width="313" height="460">
  
 
 
@@ -151,7 +154,7 @@
 <p class="watermark">Copyright 2024</p>
 <br>
 <p class="watermark">Website design by 
-  <a style = "color:rgb(50, 50, 50); font-family: helvetica; letter-spacing: 0px;" href="index.html">Oliver Zhang</a>
+  <a style = "color:rgb(50, 50, 50); font-family: helvetica; letter-spacing: 0px;" href="index.html" target="_blank">Oliver Zhang</a>
 </p>
 
 <br>
