--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 <head>
-<title>Biography - Oliver Zhang</title>
+<title>Blog - Oliver Zhang</title>
 <link rel="icon" type="image/png" href="images/favicon.png">
 <style>
     img {
@@ -31,12 +31,12 @@
       text-decoration: none;
     }
     a:hover {
-      color:rgb(178, 34, 32);
+      color:#b60500;
       background-color: transparent;
       text-decoration: none;
     }
     a:active {
-      color:rgb(178, 34, 32);
+      color:#b60500;
       background-color: transparent;
       text-decoration: none;
     }
@@ -66,8 +66,31 @@
       letter-spacing: 0px;
       font-size: 12px;
       text-align: left;
-      text-indent: 280px;
+      text-indent: 17.7rem;
       color: rgb(120, 120, 120)
+    }
+
+    .blogs {
+        margin-left: 432px;
+        width: 800px;
+    }
+    .blog-item {
+        width: 800px;
+        align-items: left;
+        margin-bottom: 30px;
+        display: flex;
+    }
+    .blog-title {
+        font-family: verdana;
+        font-size: 18px;
+        margin: 20px;
+        width: 100%;
+    }
+    .blog-date {
+        color: grey;
+        font-family: verdana;
+        letter-spacing: 2px;
+        font-size: 12px;
     }
 </style>
 </head>
@@ -79,7 +102,7 @@
 <br>
 
 <h1>
-  <a style = "color:rgb(178, 34, 32);" href="index.html">OLIVER ZHANG</a>
+  <a style = "color:#b60500;" href="index.html">OLIVER ZHANG</a>
 </h1>
 
 <p>NEUROSCIENCE & TRUMPET PERFORMANCE, NORTHWESTERN UNIVERSITY</p>
@@ -97,7 +120,7 @@
     </div>
 
     <div>
-        <p class="menu"><a href="blog.html">BLOG</a></p>
+        <p class="menu"><a href="blog.html" style="color:#b60500;">BLOG</a></p>
     </div>
 
     <div>
@@ -106,10 +129,51 @@
 </div>
 
 
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
+<div class="blogs">
+    <div class="blog-item">
+        <a href="Blog 1 - something.html">
+            <img src="images/chosen vale.jpg" alt="Chosen Vale" style="width:300px;">
+        </a>
+        <section>
+            <h5 class="blog-title">
+                <a href="Blog 1 - something.html" style="color:black; text-decoration: underline;">Something... tbd</a>
+            </h5>
+            <p class="blog-date">date</p>
+        </section>
+    </div>
+    <div class="blog-item">
+        <a href="Blog 2 - something.html">
+            <img src="images/nafme.jpg" alt="NAfME" style="width:300px;">
+        </a>
+        <section>
+            <h5 class="blog-title">
+                <a href="Blog 1 - something.html" style="color:black; text-decoration: underline;">Something... tbd</a>
+            </h5>
+            <p class="blog-date">date</p>
+        </section>
+    </div>
+</div>
+
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
 <p class="watermark">Copyright 2024</p>
 <br>
 <p class="watermark">Website design by 
-  <a style = "color:rgb(50, 50, 50); font-family: helvetica; letter-spacing: 0px;" href="index.html">Oliver Zhang</a>
+  <a style = "color:rgb(50, 50, 50); font-family: helvetica; letter-spacing: 0px;" href="index.html" target="_blank">Oliver Zhang</a>
 </p>
 
 <br>
