--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
 <title>Oliver Zhang</title>
 <link rel="icon" type="image/png" href="images/favicon.png">
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <style>
     img {
       display: block;
@@ -31,12 +34,12 @@
       text-decoration: none;
     }
     a:hover {
-      color:rgb(178, 34, 32);
+      color:#b60500;
       background-color: transparent;
       text-decoration: none;
     }
     a:active {
-      color:rgb(178, 34, 32);
+      color:#b60500;
       background-color: transparent;
       text-decoration: none;
     }
@@ -64,14 +67,14 @@
     }
     h3 {
       font-family: verdana;
-      text-indent: 480px;
+      text-indent: 30rem;
     }
     p.watermark {
       font-family: verdana;
       letter-spacing: 0px;
       font-size: 12px;
       text-align: left;
-      text-indent: 280px;
+      text-indent: 17.7rem;
       color: rgb(120, 120, 120)
     }
 </style>
@@ -84,7 +87,7 @@
 <br>
 
 <h1>
-  <a style = "color:rgb(178, 34, 32);" href="index.html">OLIVER ZHANG</a>
+  <a style = "color:#b60500;" href="index.html">OLIVER ZHANG</a>
 </h1>
 
 <p>NEUROSCIENCE & TRUMPET PERFORMANCE, NORTHWESTERN UNIVERSITY</p>
@@ -125,7 +128,6 @@
 <hr style="border-top:rgb(106, 105, 105); border-color: rgb(105, 105, 105); width:42%; text-align:center; margin-left:auto; margin-right:auto">
 
 <br>
-<br>
 <h3>Upcoming Events</h3>
 
 <br>
@@ -137,7 +139,7 @@
 <p class="watermark">Copyright 2024</p>
 <br>
 <p class="watermark">Website design by 
-  <a style = "color:rgb(50, 50, 50); font-family: helvetica; letter-spacing: 0px;" href="index.html">Oliver Zhang</a>
+  <a style = "color:rgb(50, 50, 50); font-family: helvetica; letter-spacing: 0px;" href="index.html" target="_blank">Oliver Zhang</a>
 </p>
 
 <br>
