--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <br>
 <br>
 
-<img src="images/296A9448.jpg" alt="oliver trumpet picture" width="700" height="476">
+<img src="images/trumpetheadshot.jpg" alt="oliver trumpet picture" width="700" height="476">
 
 <br>
 <br>
