--- a/media.html
+++ b/media.html
@@ -231,11 +231,11 @@
 
 <div class="container">
     <div class="image-viewer">
-        <img src="images/296A9546.jpg" alt="Headshot" style = "width: 800px; height: 534px; object-fit: cover; object-position:top;">
+        <img src="images/headshot.jpg" alt="Headshot" style = "width: 800px; height: 534px; object-fit: cover; object-position:top;">
         <div class="bottomleft">Headshot</div>
     </div>
     <div class="image-viewer">
-        <img src="images/296A9561.jpg" alt="Headshot" style = "width: 800px; height: 534px; object-fit: cover; object-position:0px -170px;">
+        <img src="images/trumpetheadshot2.jpg" alt="Headshot" style = "width: 800px; height: 534px; object-fit: cover; object-position:0px -170px;">
         <div class="bottomleft">Headshot</div>
     </div>
     <div class="image-viewer">
@@ -286,8 +286,8 @@
 
 
 <div class="image-container">
-    <img class="demo cursor" src="images/296A9546.jpg" alt="Headshot" onclick="currentSlide(1)">
-    <img class="demo cursor" src="images/296A9561.jpg" alt="Headshot" onclick="currentSlide(2)">
+    <img class="demo cursor" src="images/headshot.jpg" alt="Headshot" onclick="currentSlide(1)">
+    <img class="demo cursor" src="images/trumpetheadshot2.jpg" alt="Headshot" onclick="currentSlide(2)">
     <img class="demo cursor" src="images/chosen vale.jpg" alt="Chosen Vale with Giuliano Sommerhalder" onclick="currentSlide(3)">
     <img class="demo cursor" src="images/doctor.jpg" alt="Hospital Shadowing" onclick="currentSlide(4)">
     <img class="demo cursor" src="images/graduation.jpg" alt="Performing at HS Graduation" onclick="currentSlide(5)">
