--- a/biography.html
+++ b/biography.html
@@ -123,7 +123,7 @@
 <br>
 <br>
 
-<img src="images/296A9603.jpg" alt="oliver trumpet picture" width="313" height="460">
+<img src="images/nuheadshot.jpg" alt="oliver trumpet picture" width="313" height="460">
  
 
 
