--- a/contact.html
+++ b/contact.html
@@ -160,7 +160,7 @@ input[type=submit]:hover {
 <br>
 
 <div class="photo">
-    <img src="images/296A9561.jpg" alt="Headshot" style="width:313px; height:469.54px;">
+    <img src="images/trumpetheadshot2.jpg" alt="Headshot" style="width:313px; height:469.54px;">
     <div class="contact-form">
         <form action="/action_page.php">
             <div>
