--- a/contact.html
+++ b/contact.html
@@ -200,9 +200,8 @@ input[type=submit]:hover {
 <br>
 
 
-<p class="watermark">Copyright 2024</p>
-<br>
-<p class="watermark">Website design by 
+
+<p class="watermark">Website made by 
   <a style = "color:rgb(50, 50, 50); font-family: helvetica; letter-spacing: 0px;" href="index.html" target="_blank">Oliver Zhang</a>
 </p>
 
