--- a/biography.html
+++ b/biography.html
@@ -10,8 +10,7 @@
 <style>
     img {
       float: right;
-      margin-right: 27rem;
-      padding-left: 30px;
+      padding-left: 34px;
     }
     div.menu {
         width:50%;
@@ -63,6 +62,7 @@
       font-size: 11px;
       text-align: center;
       letter-spacing: 3px;
+      overflow: hidden;
     }
     p.watermark {
       font-family: verdana;
@@ -76,10 +76,16 @@
         font-family: verdana;
         font-size: 0.89rem;
         color: rgb(64, 64, 64);
-        width: 800px;
+        width: 50rem;
         text-align: left;
         margin: auto;
         line-height: 1.7rem;
+    }
+    .photo-text {
+      width: 50rem;
+      justify-content: center;
+      align-items: center;
+      margin: auto;
     }
 </style>
 </head>
@@ -123,26 +129,27 @@
 <br>
 <br>
 
-<img src="images/nuheadshot.jpg" alt="oliver trumpet picture" width="313" height="460">
- 
 
 
-<div class="biography">
-    <section>
-        Oliver is currently a sophomore Neuroscience and Trumpet Performance major at Northwestern University where he is studying with David Bilger.
-    </section>
-    <br>
-    <section>
-        Oliver began playing the trumpet in 2nd grade. In 5th grade, he began playing with the Fountain City Youth Brass Band in which he continued to play all through high school, performing on flugelhorn for three years and solo cornet for five years. In his first year with the Fountain City Youth Brass Band, Oliver won the North American British Brass Band Association (NABBA) youth solo competition. Once he was in high school, Oliver performed with the Kansas All State Band and Orchestra for all four years of high school, he performed with the All National Honor Ensemble Concert Band for three years and he performed in his high school's wind ensemble, jazz band, pit orchestra and full orchestra throughout that time.
-    </section>
-    <br>
-    <section>
-        Oliver won the National Trumpet Competition high school division in 2022, performing the first Peskin Concerto. And he earned 2nd place in 2023 performing the first movement of the Tomasi Concerto. From sophomore through senior year of high school he studied trumpet with Dr. Keith Benjamin who was a huge reason for his success as he always encouraged him to play music and tell a story rather than just play trumpet. He taught Oliver many life lessons and introduced him to his network without reservation. Dr. Benjamin also brought him to UMKC trumpet related events and Kansas City Symphony performances. When speaking of Oliver, Dr. Benjamin says, “His strongest talent is an amazing ability to learn things as quickly and as thoroughly as anybody I've ever taught - he has an incredible knack for hearing an idea once, then just executing that idea from that moment on, without needing to come back to the issue.
-    </section>
-    <br>
-    <section>
-        When he's not practicing, performing or listening to trumpet, Oliver is a dedicated athlete. He has been swimming since 1st grade, competing on his high school swim team and making state for three years in a row. During his senior year, he and his teammates won the Kansas State Swimming Championship.
-    </section>
+<div class="photo-text">
+  <img src="images/nuheadshot.jpg" alt="oliver trumpet picture" width="313">
+  <div class="biography">
+      <section>
+          Oliver is currently a sophomore Neuroscience and Trumpet Performance major at Northwestern University where he is studying with David Bilger.
+      </section>
+      <br>
+      <section>
+          Oliver began playing the trumpet in 2nd grade. In 5th grade, he began playing with the Fountain City Youth Brass Band in which he continued to play all through high school, performing on flugelhorn for three years and solo cornet for five years. In his first year with the Fountain City Youth Brass Band, Oliver won the North American British Brass Band Association (NABBA) youth solo competition. Once he was in high school, Oliver performed with the Kansas All State Band and Orchestra for all four years of high school, he performed with the All National Honor Ensemble Concert Band for three years and he performed in his high school's wind ensemble, jazz band, pit orchestra and full orchestra throughout that time.
+      </section>
+      <br>
+      <section>
+          Oliver won the National Trumpet Competition high school division in 2022, performing the first Peskin Concerto. And he earned 2nd place in 2023 performing the first movement of the Tomasi Concerto. From sophomore through senior year of high school he studied trumpet with Dr. Keith Benjamin who was a huge reason for his success as he always encouraged him to play music and tell a story rather than just play trumpet. He taught Oliver many life lessons and introduced him to his network without reservation. Dr. Benjamin also brought him to UMKC trumpet related events and Kansas City Symphony performances. When speaking of Oliver, Dr. Benjamin says, "His strongest talent is an amazing ability to learn things as quickly and as thoroughly as anybody I've ever taught - he has an incredible knack for hearing an idea once, then just executing that idea from that moment on, without needing to come back to the issue."
+      </section>
+      <br>
+      <section>
+          When he's not practicing, performing or listening to trumpet, Oliver is a dedicated athlete. He has been swimming since 1st grade, competing on his high school swim team and making state for three years in a row. During his senior year, he and his teammates won the Kansas State Swimming Championship.
+      </section>
+  </div>
 </div>
 
 <br>
