--- a/blog.html
+++ b/blog.html
@@ -60,6 +60,7 @@
       font-size: 11px;
       text-align: center;
       letter-spacing: 3px;
+      overflow: hidden;
     }
     p.watermark {
       font-family: verdana;
