--- a/contact.html
+++ b/contact.html
@@ -61,6 +61,7 @@
       font-size: 11px;
       text-align: center;
       letter-spacing: 3px;
+      overflow: hidden;
     }
     p.watermark {
       font-family: verdana;
@@ -76,7 +77,7 @@
 
     .photo {
         width: 800px;
-        margin-left: 432px;
+        margin: auto;
         display: flex;
     }
 
