--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         float:left;
     }
     a:link {
-      color: #424242;
+      color: #646464;
       background-color: transparent;
       text-decoration: none;
     }
     a:visited {
-      color: #424242;
+      color: #646464;
       background-color: transparent;
       text-decoration: none;
     }
@@ -63,11 +63,11 @@
       font-size: 11px;
       text-align: center;
       letter-spacing: 3px;
-      color: rgb(51, 51, 51)
+      overflow: hidden;
     }
     h3 {
       font-family: verdana;
-      text-indent: 30rem;
+      margin-left: 30rem;
     }
     p.watermark {
       font-family: verdana;
@@ -118,14 +118,14 @@
 <br>
 <br>
 
-<img src="images/trumpetheadshot.jpg" alt="oliver trumpet picture" width="700" height="476">
+<img src="images/trumpetheadshot.jpg" alt="oliver trumpet picture" width="700">
 
 <br>
 <br>
 <br>
 <br>
 
-<hr style="border-top:rgb(106, 105, 105); border-color: rgb(105, 105, 105); width:42%; text-align:center; margin-left:auto; margin-right:auto">
+<hr style="border-top:rgb(106, 105, 105); border-color: rgb(105, 105, 105); width:43.7rem; text-align:center; margin-left:auto; margin-right:auto">
 
 <br>
 <h3>Upcoming Events</h3>
