--- a/media.html
+++ b/media.html
@@ -63,6 +63,7 @@
       font-size: 11px;
       text-align: center;
       letter-spacing: 3px;
+      overflow: hidden;
     }
     p.watermark {
       font-family: verdana;
@@ -171,7 +172,7 @@
     }
 
     .videos {
-        margin-left: 432px;
+        margin: auto;
         width: 800px;
     }
     .video-item {
