--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
 <title>Contact - Oliver Zhang</title>
-<link rel="icon" type="image/png" href="images/favicon.png">
+<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 <style>
     img {
       display: block;
@@ -11,7 +11,7 @@
       margin-right: auto;
     }
     div.menu {
-        width:50%;
+        width:50rem;
         overflow:auto;
         margin-left: auto;
         margin-right: auto;
@@ -63,12 +63,13 @@
       letter-spacing: 3px;
       overflow: hidden;
     }
-    p.watermark {
+    .watermark {
+      width: 69rem;
+      margin-left: auto;
+      margin-right: auto;
       font-family: verdana;
       letter-spacing: 0px;
-      font-size: 12px;
-      text-align: left;
-      text-indent: 17.7rem;
+      font-size: 13px;
       color: rgb(120, 120, 120)
     }
 
@@ -192,6 +193,8 @@ input[type=submit]:hover {
       </div>
 </div>
 
+<div style="width: 800px; margin: auto; font-family: helvetica; font-size: 0.9rem;"><b>Email: </b>oliver.zhang.trpt [at] gmail.com</div>
+
 <br>
 <br>
 <br>
@@ -202,9 +205,9 @@ input[type=submit]:hover {
 
 
 
-<p class="watermark">Website made by 
+<div class="watermark">Website made by 
   <a style = "color:rgb(50, 50, 50); font-family: helvetica; letter-spacing: 0px;" href="index.html" target="_blank">Oliver Zhang</a>
-</p>
+</div>
 
 <br>
 <br>
