--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <title>Oliver Zhang</title>
-<link rel="icon" type="image/png" href="images/favicon.png">
+<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -14,7 +14,7 @@
       margin-right: auto;
     }
     div.menu {
-        width:50%;
+        width:50rem;
         overflow:auto;
         margin-left: auto;
         margin-right: auto;
@@ -65,16 +65,20 @@
       letter-spacing: 3px;
       overflow: hidden;
     }
-    h3 {
+    .upcoming {
       font-family: verdana;
-      margin-left: 30rem;
+      font-size: 1.2rem;
+      width: 44rem;
+      margin-right: auto;
+      margin-left: auto;
     }
-    p.watermark {
+    .watermark {
+      width: 69rem;
+      margin-left: auto;
+      margin-right: auto;
       font-family: verdana;
       letter-spacing: 0px;
-      font-size: 12px;
-      text-align: left;
-      text-indent: 17.7rem;
+      font-size: 13px;
       color: rgb(120, 120, 120)
     }
 </style>
@@ -128,18 +132,19 @@
 <hr style="border-top:rgb(106, 105, 105); border-color: rgb(105, 105, 105); width:43.7rem; text-align:center; margin-left:auto; margin-right:auto">
 
 <br>
-<h3>Upcoming Events</h3>
-
-<br>
-<br>
-<br>
-<br>
-<br>
+<div class="upcoming"><b>Upcoming Events</b></div>
 
 
-<p class="watermark">Website made by 
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<div class="watermark">Website made by 
   <a style = "color:rgb(50, 50, 50); font-family: helvetica; letter-spacing: 0px;" href="index.html" target="_blank">Oliver Zhang</a>
-</p>
+</div>
+
 
 <br>
 <br>
