--- a/media.html
+++ b/media.html
@@ -3,7 +3,7 @@
 
 <head>
 <title>Media - Oliver Zhang</title>
-<link rel="icon" type="image/png" href="images/favicon.png">
+<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -14,7 +14,7 @@
       margin-right: auto;
     }
     div.menu {
-        width:50%;
+        width:50rem;
         overflow:auto;
         margin-left: auto;
         margin-right: auto;
@@ -65,12 +65,13 @@
       letter-spacing: 3px;
       overflow: hidden;
     }
-    p.watermark {
+    .watermark {
+      width: 69rem;
+      margin-left: auto;
+      margin-right: auto;
       font-family: verdana;
       letter-spacing: 0px;
-      font-size: 12px;
-      text-align: left;
-      text-indent: 17.7rem;
+      font-size: 13px;
       color: rgb(120, 120, 120)
     }
 
@@ -384,9 +385,9 @@
 
 
 
-<p class="watermark">Website made by 
-  <a style = "color:rgb(50, 50, 50); font-family: helvetica; letter-spacing: 0px;" href="index.html" target="_blank">Oliver Zhang</a>
-</p>
+<div class="watermark">Website made by 
+    <a style = "color:rgb(50, 50, 50); font-family: helvetica; letter-spacing: 0px;" href="index.html" target="_blank">Oliver Zhang</a>
+</div>
 
 <br>
 <br>
