--- a/media.html
+++ b/media.html
@@ -82,8 +82,9 @@
         align-items: center;
         
         height: 80px;
-        margin-left: 432px;
-        margin-right: 432px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 800px;
 
         flex-wrap: nowrap;
         padding-top: 1rem;
@@ -112,8 +113,9 @@
         align-items: center;
         justify-items: center;
         overflow: auto;
-        margin-left: 432px;
-        margin-right: 432px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 800px;
     }
     /* Add a pointer when hovering over the thumbnail images */
     .cursor {
