--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
       margin-right: auto;
     }
     div.menu {
-        width:50rem;
+        width:92%;
         overflow:auto;
         margin-left: auto;
         margin-right: auto;
+        max-width: 50rem;
     }
     div.menu div {
-        width:25%;  
+        width:20%;  
         float:left;
     }
     a:link {
@@ -68,18 +69,20 @@
     .upcoming {
       font-family: verdana;
       font-size: 1.2rem;
-      width: 44rem;
+      width: 92%;
       margin-right: auto;
       margin-left: auto;
+      max-width: 44rem;
     }
     .watermark {
-      width: 69rem;
+      width: 92%;
       margin-left: auto;
       margin-right: auto;
       font-family: verdana;
       letter-spacing: 0px;
       font-size: 13px;
-      color: rgb(120, 120, 120)
+      color: rgb(120, 120, 120);
+      max-width: 69rem;
     }
 </style>
 </head>
@@ -87,7 +90,7 @@
 
 
 <body>
-  
+
 <br>
 
 <h1>
@@ -115,6 +118,10 @@
     <div>
         <p class="menu"><a href="contact.html">CONTACT</a></p>
     </div>
+
+    <div>
+      <p class="menu"><a href="Pikachu.html">PIKACHU</a></p>
+    </div>
 </div>
 
 <br>
@@ -122,14 +129,16 @@
 <br>
 <br>
 
-<img src="images/trumpetheadshot.jpg" alt="oliver trumpet picture" width="700">
+
+<img src="images/trumpetheadshot.jpg" alt="oliver trumpet picture" width="92%" style="max-width: 700px; padding-left: 1rem; padding-right: 1rem;">
+
 
 <br>
 <br>
 <br>
 <br>
 
-<hr style="border-top:rgb(106, 105, 105); border-color: rgb(105, 105, 105); width:43.7rem; text-align:center; margin-left:auto; margin-right:auto">
+<hr style="border-top:rgb(106, 105, 105); border-color: rgb(105, 105, 105); width:92%; max-width: 700px; text-align:center; margin-left:auto; margin-right:auto">
 
 <br>
 <div class="upcoming"><b>Upcoming Events</b></div>
@@ -146,6 +155,7 @@
 </div>
 
 
+<br>
 <br>
 <br>
 <br>
