--- a/biography.html
+++ b/biography.html
@@ -13,13 +13,14 @@
       padding-left: 34px;
     }
     div.menu {
-        width:50rem;
+        width:92%;
         overflow:auto;
         margin-left: auto;
         margin-right: auto;
+        max-width: 50rem;
     }
     div.menu div {
-        width:25%;  
+        width:20%;  
         float:left;
     }
     a:link {
@@ -65,28 +66,31 @@
       overflow: hidden;
     }
     .watermark {
-      width: 69rem;
+      width: 92%;
       margin-left: auto;
       margin-right: auto;
       font-family: verdana;
       letter-spacing: 0px;
       font-size: 13px;
-      color: rgb(120, 120, 120)
+      color: rgb(120, 120, 120);
+      max-width: 69rem;
     }
     .biography {
         font-family: verdana;
         font-size: 0.89rem;
         color: rgb(64, 64, 64);
-        width: 50rem;
+        width: 100%;
         text-align: left;
         margin: auto;
         line-height: 1.7rem;
+        max-width: 50rem;
     }
     .photo-text {
-      width: 50rem;
+      width: 92%;
       justify-content: center;
       align-items: center;
       margin: auto;
+      max-width: 50rem;
     }
 </style>
 </head>
@@ -121,6 +125,10 @@
 
     <div>
         <p class="menu"><a href="contact.html">CONTACT</a></p>
+    </div>
+
+    <div>
+      <p class="menu"><a href="Pikachu.html">PIKACHU</a></p>
     </div>
 </div>
 
@@ -164,6 +172,7 @@
   <a style = "color:rgb(50, 50, 50); font-family: helvetica; letter-spacing: 0px;" href="index.html" target="_blank">Oliver Zhang</a>
 </div>
 
+<br>
 <br>
 <br>
 <br>
