--- a/blog.html
+++ b/blog.html
@@ -11,13 +11,14 @@
       margin-right: auto;
     }
     div.menu {
-        width:50rem;
+        width:92%;
         overflow:auto;
         margin-left: auto;
         margin-right: auto;
+        max-width: 50rem;
     }
     div.menu div {
-        width:25%;  
+        width:20%;  
         float:left;
     }
     a:link {
@@ -63,22 +64,26 @@
       overflow: hidden;
     }
     .watermark {
-      width: 69rem;
+      width: 92%;
       margin-left: auto;
       margin-right: auto;
       font-family: verdana;
       letter-spacing: 0px;
       font-size: 13px;
-      color: rgb(120, 120, 120)
+      color: rgb(120, 120, 120);
+      max-width: 69rem;
     }
 
     .blogs {
-        margin-left: 432px;
-        width: 800px;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 800px;
+        width: 92%
     }
     .blog-item {
-        width: 800px;
-        align-items: left;
+        width: 92%;
+        max-width: 800px;
+        justify-content: center;
         margin-bottom: 30px;
         display: flex;
     }
@@ -128,6 +133,10 @@
     <div>
         <p class="menu"><a href="contact.html">CONTACT</a></p>
     </div>
+
+    <div>
+      <p class="menu"><a href="Pikachu.html">PIKACHU</a></p>
+    </div>
 </div>
 
 
@@ -139,7 +148,7 @@
 
 
 <div class="blogs">
-    <div class="blog-item">
+  <div class="blog-item">
         <a href="Blog 1 - something.html">
             <img src="images/chosen vale.jpg" alt="Chosen Vale" style="width:300px;">
         </a>
@@ -149,8 +158,8 @@
             </h5>
             <p class="blog-date">date</p>
         </section>
-    </div>
-    <div class="blog-item">
+  </div>
+  <div class="blog-item">
         <a href="Blog 2 - something.html">
             <img src="images/nafme.jpg" alt="NAfME" style="width:300px;">
         </a>
@@ -160,7 +169,7 @@
             </h5>
             <p class="blog-date">date</p>
         </section>
-    </div>
+  </div>
 </div>
 
 
@@ -177,6 +186,7 @@
   <a style = "color:rgb(50, 50, 50); font-family: helvetica; letter-spacing: 0px;" href="index.html" target="_blank">Oliver Zhang</a>
 </div>
 
+<br>
 <br>
 <br>
 <br>
