--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,14 @@
       margin-right: auto;
     }
     div.menu {
-        width:50rem;
+        width:92%;
         overflow:auto;
         margin-left: auto;
         margin-right: auto;
+        max-width: 50rem;
     }
     div.menu div {
-        width:25%;  
+        width:20%;  
         float:left;
     }
     a:link {
@@ -64,20 +65,22 @@
       overflow: hidden;
     }
     .watermark {
-      width: 69rem;
+      width: 92%;
+      max-width: 69rem;
       margin-left: auto;
       margin-right: auto;
       font-family: verdana;
       letter-spacing: 0px;
       font-size: 13px;
-      color: rgb(120, 120, 120)
+      color: rgb(120, 120, 120);
     }
 
 
 
 
     .photo {
-        width: 800px;
+        width: 92%;
+        max-width: 800px;
         margin: auto;
         display: flex;
     }
@@ -153,6 +156,10 @@ input[type=submit]:hover {
     <div>
         <p class="menu"><a href="contact.html" style="color:#b60500;">CONTACT</a></p>
     </div>
+    
+    <div>
+        <p class="menu"><a href="Pikachu.html">PIKACHU</a></p>
+    </div>
 </div>
 
 <br>
@@ -193,7 +200,7 @@ input[type=submit]:hover {
       </div>
 </div>
 
-<div style="width: 800px; margin: auto; font-family: helvetica; font-size: 0.9rem;"><b>Email: </b>oliver.zhang.trpt [at] gmail.com</div>
+<div style="width: 92%; max-width:800px; margin: auto; font-family: helvetica; font-size: 0.8rem;"><b>Email: </b>oliver.zhang.trpt [at] gmail.com</div>
 
 <br>
 <br>
@@ -209,6 +216,7 @@ input[type=submit]:hover {
   <a style = "color:rgb(50, 50, 50); font-family: helvetica; letter-spacing: 0px;" href="index.html" target="_blank">Oliver Zhang</a>
 </div>
 
+<br>
 <br>
 <br>
 <br>
