--- a/media.html
+++ b/media.html
@@ -12,15 +12,18 @@
       display: block;
       margin-left: auto;
       margin-right: auto;
+      max-width: 800px;
+      max-height: 534px;
     }
     div.menu {
-        width:50rem;
+        width:92%;
         overflow:auto;
         margin-left: auto;
         margin-right: auto;
+        max-width: 50rem;
     }
     div.menu div {
-        width:25%;  
+        width:20%;  
         float:left;
     }
     a:link {
@@ -66,13 +69,14 @@
       overflow: hidden;
     }
     .watermark {
-      width: 69rem;
+      width: 92%;
       margin-left: auto;
       margin-right: auto;
       font-family: verdana;
       letter-spacing: 0px;
       font-size: 13px;
-      color: rgb(120, 120, 120)
+      color: rgb(120, 120, 120);
+      max-width: 69rem;
     }
 
 
@@ -84,7 +88,8 @@
         height: 80px;
         margin-left: auto;
         margin-right: auto;
-        width: 800px;
+        width: 92%;
+        max-width: 800px;
 
         flex-wrap: nowrap;
         padding-top: 1rem;
@@ -115,7 +120,9 @@
         overflow: auto;
         margin-left: auto;
         margin-right: auto;
-        width: 800px;
+        width: 92%;
+        max-width: 800px;
+        max-height: 534px;
     }
     /* Add a pointer when hovering over the thumbnail images */
     .cursor {
@@ -176,13 +183,15 @@
 
     .videos {
         margin: auto;
-        width: 800px;
+        width: 92%;
+        max-width: 800px;
     }
     .video-item {
-        width: 800px;
+        width: 92%;
         align-items: left;
         margin-bottom: 32px;
         display: flex;
+        max-width: 800px;
     }
     .video-text {
         font-family: verdana;
@@ -222,6 +231,10 @@
     <div>
         <p class="menu"><a href="contact.html">CONTACT</a></p>
     </div>
+
+    <div>
+        <p class="menu"><a href="Pikachu.html">PIKACHU</a></p>
+    </div>
 </div>
 
 <br>
@@ -229,29 +242,29 @@
 <br>
 <br>
 
-<div style="font-family: verdana; width: 800px; text-align: left; margin: auto;">
+<div style="font-family: verdana; width: 92%; max-width: 800px; text-align: left; margin: auto;">
     <h2>Photos</h2>
 </div>
 
 <div class="container">
     <div class="image-viewer">
-        <img src="images/headshot.jpg" alt="Headshot" style = "width: 800px; height: 534px; object-fit: cover; object-position:top;">
+        <img src="images/headshot.jpg" alt="Headshot" style = "width: 100%; object-fit: cover; object-position:top;">
         <div class="bottomleft">Headshot</div>
     </div>
     <div class="image-viewer">
-        <img src="images/trumpetheadshot2.jpg" alt="Headshot" style = "width: 800px; height: 534px; object-fit: cover; object-position:0px -170px;">
+        <img src="images/trumpetheadshot2.jpg" alt="Headshot" style = "width: 100%; object-fit: cover; object-position:0px -170px;">
         <div class="bottomleft">Headshot</div>
     </div>
     <div class="image-viewer">
-        <img src="images/chosen vale.jpg" alt="Chosen Vale with Giuliano Sommerhalder" style = "width: 800px; height: 534px; object-fit: cover; object-position:top;">
+        <img src="images/chosen vale.jpg" alt="Chosen Vale with Giuliano Sommerhalder" style = "width: 100%; object-fit: cover; object-position:top;">
         <div class="bottomleft">Chosen Vale with Giuliano Sommerhalder</div>
     </div>
     <div class="image-viewer">
-        <img src="images/doctor.jpg" alt="Hospital Shadowing" style = "width: 800px; height: 534px; object-fit: cover; object-position:0px -250px;">
+        <img src="images/doctor.jpg" alt="Hospital Shadowing" style = "width: 100%; height: 534px; object-fit: cover; object-position:0px -250px;">
         <div class="bottomleft">Hospital Shadowing</div>
     </div>
     <div class="image-viewer">
-        <img src="images/graduation.jpg" alt="Performing at HS Graduation" style = "width: 800px; height: 534px; object-fit: cover; object-position:0px -80px;">
+        <img src="images/graduation.jpg" alt="Performing at HS Graduation" style = "width: 100%; height: 534px; object-fit: cover; object-position:0px -80px;">
         <div class="bottomleft">Performing at HS Graduation</div>
     </div>
     <div class="image-viewer">
@@ -306,7 +319,7 @@
 
 <br>
 <br>
-<hr style="border-top:rgb(106, 105, 105); border-color: rgb(105, 105, 105); width:800px; text-align:center; margin-left:auto; margin-right:auto">
+<hr style="border-top:rgb(106, 105, 105); border-color: rgb(105, 105, 105); width:92%; max-width: 800px; text-align:center; margin-left:auto; margin-right:auto">
 
 <script>
     let slideIndex = 1;
@@ -339,7 +352,7 @@
 
 <br>
 
-<div style="font-family: verdana; width: 800px; text-align: left; margin: auto;">
+<div style="font-family: verdana; width: 92%; max-width: 800px; text-align: left; margin: auto;">
     <h2>Videos</h2>
 </div>
 
@@ -391,6 +404,7 @@
     <a style = "color:rgb(50, 50, 50); font-family: helvetica; letter-spacing: 0px;" href="index.html" target="_blank">Oliver Zhang</a>
 </div>
 
+<br>
 <br>
 <br>
 <br>
