--- a/blog.html
+++ b/blog.html
@@ -10,14 +10,14 @@
       margin-left: auto;
       margin-right: auto;
     }
-    div.menu {
+    .menu {
         width:92%;
         overflow:auto;
         margin-left: auto;
         margin-right: auto;
         max-width: 50rem;
     }
-    div.menu div {
+    .menu div {
         width:20%;  
         float:left;
     }
@@ -56,7 +56,7 @@
       color:rgb(168, 168, 168);
       letter-spacing: 5px
     }
-    p.menu {
+    .menu {
       font-family:verdana;
       font-size: 11px;
       text-align: center;
@@ -77,12 +77,12 @@
     .blogs {
         margin-left: auto;
         margin-right: auto;
-        max-width: 800px;
-        width: 92%
+        max-width: 50rem;
+        width: 92%;
     }
     .blog-item {
         width: 92%;
-        max-width: 800px;
+        max-width: 50rem;
         justify-content: center;
         margin-bottom: 30px;
         display: flex;
@@ -150,7 +150,7 @@
 <div class="blogs">
   <div class="blog-item">
         <a href="Blog 1 - something.html">
-            <img src="images/chosen vale.jpg" alt="Chosen Vale" style="width:300px;">
+            <img src="images/chosen vale.jpg" alt="Chosen Vale" style="max-width:18.75rem; width: 92%;">
         </a>
         <section>
             <h5 class="blog-title">
@@ -161,7 +161,7 @@
   </div>
   <div class="blog-item">
         <a href="Blog 2 - something.html">
-            <img src="images/nafme.jpg" alt="NAfME" style="width:300px;">
+            <img src="images/nafme.jpg" alt="NAfME" style="max-width:18.75rem; width: 92%;">
         </a>
         <section>
             <h5 class="blog-title">
