--- a/contact.html
+++ b/contact.html
@@ -10,14 +10,14 @@
       margin-left: 0;
       margin-right: auto;
     }
-    div.menu {
+    .menu {
         width:92%;
         overflow:auto;
         margin-left: auto;
         margin-right: auto;
         max-width: 50rem;
     }
-    div.menu div {
+    .menu div {
         width:20%;  
         float:left;
     }
@@ -57,7 +57,7 @@
       color:rgb(168, 168, 168);
       letter-spacing: 5px
     }
-    p.menu {
+    .menu {
       font-family:verdana;
       font-size: 11px;
       text-align: center;
@@ -80,8 +80,9 @@
 
     .photo {
         width: 92%;
-        max-width: 800px;
-        margin: auto;
+        max-width: 50rem;
+        margin-left: auto;
+        margin-right: auto;
         display: flex;
     }
 
