--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
       margin-left: auto;
       margin-right: auto;
     }
-    div.menu {
+    .menu {
         width:92%;
         overflow:auto;
         margin-left: auto;
         margin-right: auto;
         max-width: 50rem;
     }
-    div.menu div {
+    .menu div {
         width:20%;  
         float:left;
     }
@@ -59,7 +59,7 @@
       color:rgb(168, 168, 168);
       letter-spacing: 5px
     }
-    p.menu {
+    .menu {
       font-family: verdana;
       font-size: 11px;
       text-align: center;
