--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,8 @@
 <head>
 <title>Blog - Oliver Zhang</title>
 <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <style>
     img {
       display: block;
