--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,12 @@
 <head>
 <title>Contact - Oliver Zhang</title>
 <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <style>
     img {
       display: block;
-      margin-left: 0;
+      margin-left: auto;
       margin-right: auto;
     }
     .menu {
@@ -201,7 +203,7 @@ input[type=submit]:hover {
       </div>
 </div>
 
-<div style="width: 92%; max-width:800px; margin: auto; font-family: helvetica; font-size: 0.8rem;"><b>Email: </b>oliver.zhang.trpt [at] gmail.com</div>
+<div style="width: 92%; max-width:50rem; margin: auto; font-family: helvetica; font-size: 0.8rem;"><b>Email: </b>oliver.zhang.trpt [at] gmail.com</div>
 
 <br>
 <br>
