--- a/media.html
+++ b/media.html
@@ -4,7 +4,6 @@
 <head>
 <title>Media - Oliver Zhang</title>
 <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
@@ -15,14 +14,14 @@
       max-width: 800px;
       max-height: 534px;
     }
-    div.menu {
+    .menu {
         width:92%;
         overflow:auto;
         margin-left: auto;
         margin-right: auto;
         max-width: 50rem;
     }
-    div.menu div {
+    .menu div {
         width:20%;  
         float:left;
     }
@@ -61,7 +60,7 @@
       color:rgb(168, 168, 168);
       letter-spacing: 5px
     }
-    p.menu {
+    .menu {
       font-family:verdana;
       font-size: 11px;
       text-align: center;
