--- a/contact.html
+++ b/contact.html
@@ -12,14 +12,14 @@
       margin-left: auto;
       margin-right: auto;
     }
-    .menu {
+    div.menu {
         width:92%;
         overflow:auto;
         margin-left: auto;
         margin-right: auto;
         max-width: 50rem;
     }
-    .menu div {
+    div.menu div {
         width:20%;  
         float:left;
     }
@@ -59,7 +59,7 @@
       color:rgb(168, 168, 168);
       letter-spacing: 5px
     }
-    .menu {
+    p.menu {
       font-family:verdana;
       font-size: 11px;
       text-align: center;
@@ -130,7 +130,7 @@ input[type=submit]:hover {
 
 
 
-<body>						
+<body>
 
 <br>
 
@@ -172,7 +172,7 @@ input[type=submit]:hover {
 <br>
 
 <div class="photo">
-    <img src="images/trumpetheadshot2.jpg" alt="Headshot" style="width:313px; height:469.54px;">
+    <img src="images/trumpetheadshot2.jpg" alt="Headshot" style="max-width:313px; width: 50%; max-height:469.54px; height: 50%">
     <div class="contact-form">
         <form action="/action_page.php">
             <div>
