--- a/media.html
+++ b/media.html
@@ -14,14 +14,14 @@
       max-width: 800px;
       max-height: 534px;
     }
-    .menu {
+    div.menu {
         width:92%;
         overflow:auto;
         margin-left: auto;
         margin-right: auto;
         max-width: 50rem;
     }
-    .menu div {
+    div.menu div {
         width:20%;  
         float:left;
     }
@@ -60,7 +60,7 @@
       color:rgb(168, 168, 168);
       letter-spacing: 5px
     }
-    .menu {
+    p.menu {
       font-family:verdana;
       font-size: 11px;
       text-align: center;
