--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
       margin-left: auto;
       margin-right: auto;
     }
-    .menu {
+    div.menu {
         width:92%;
         overflow:auto;
         margin-left: auto;
         margin-right: auto;
         max-width: 50rem;
     }
-    .menu div {
+    div.menu div {
         width:20%;  
         float:left;
     }
@@ -58,7 +58,7 @@
       color:rgb(168, 168, 168);
       letter-spacing: 5px
     }
-    .menu {
+    p.menu {
       font-family: verdana;
       font-size: 11px;
       text-align: center;
