--- a/biography.html
+++ b/biography.html
@@ -17,9 +17,10 @@
         margin-left: auto;
         margin-right: auto;
         max-width: 50rem;
+        height:7.84rem;
     }
     div.menu div {
-        width:20%;  
+        width:25%;  
         float:left;
     }
     a:link {
@@ -91,6 +92,48 @@
       margin: auto;
       max-width: 50rem;
     }
+
+
+    .dropbtn {
+      font-family: verdana;
+      font-size: 11px;
+      text-align: center;
+      letter-spacing: 3px;
+      overflow: hidden;
+      color: #646464;
+      position: relative;
+    }
+
+    .dropdown {
+      position: relative;
+    }
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      left: 32.2%;
+      right: auto;
+    }
+
+    .dropdown-content a {
+      font-family: verdana;
+      font-size: 11px;
+      position: relative;
+      letter-spacing: 3px;
+      display:block;
+      line-height: 1.4rem;
+    }
+
+    .dropdown-content a:hover {
+      background-color: transparent;
+      text-decoration: none;
+    }
+
+    .dropdown:hover .dropdown-content {
+      background-color: white;
+      text-decoration: none;
+      display:block;
+    }
 </style>
 </head>
 
@@ -119,23 +162,18 @@
     </div>
 
     <div>
-        <p class="menu"><a href="blog.html">BLOG</a></p>
-    </div>
-
-    <div>
         <p class="menu"><a href="contact.html">CONTACT</a></p>
     </div>
 
-    <div>
-      <p class="menu"><a href="Pikachu.html">PIKACHU</a></p>
+    <div class="dropdown">
+      <p style="letter-spacing:3px; overflow:hidden;"><a href="#" onclick="return false">GALLERY</a></p>
+        <div class="dropdown-content">
+          <a href="Pikachu.html">PIKACHU</a>
+          <a href="Gundam.html">GUNDAM</a>
+          <a href="#">FOOD</a>
+        </div>
     </div>
 </div>
-
-<br>
-<br>
-<br>
-<br>
-<br>
 
 
 
