--- a/contact.html
+++ b/contact.html
@@ -18,9 +18,10 @@
         margin-left: auto;
         margin-right: auto;
         max-width: 50rem;
+        height:6.7rem;
     }
     div.menu div {
-        width:20%;  
+        width:25%;  
         float:left;
     }
     a:link {
@@ -125,6 +126,49 @@ input[type=submit]:hover {
         display: flex;
         gap: 25px;
     }
+
+
+    .dropbtn {
+      font-family: verdana;
+      font-size: 11px;
+      text-align: center;
+      letter-spacing: 3px;
+      overflow: hidden;
+      color: #646464;
+      position: relative;
+    }
+
+    .dropdown {
+      position: relative;
+      display: inline-block;
+    }
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      left: 32.2%;
+      right: auto;
+    }
+
+    .dropdown-content a {
+      font-family: verdana;
+      font-size: 11px;
+      position: relative;
+      letter-spacing: 3px;
+      display:block;
+      line-height: 1.4rem;
+    }
+
+    .dropdown-content a:hover {
+      background-color: transparent;
+      text-decoration: none;
+    }
+
+    .dropdown:hover .dropdown-content {
+      background-color: white;
+      text-decoration: none;
+      display:block;
+    }
 </style>
 </head>
 
@@ -153,23 +197,19 @@ input[type=submit]:hover {
     </div>
 
     <div>
-        <p class="menu"><a href="blog.html">BLOG</a></p>
-    </div>
-
-    <div>
         <p class="menu"><a href="contact.html" style="color:#b60500;">CONTACT</a></p>
     </div>
     
-    <div>
-        <p class="menu"><a href="Pikachu.html">PIKACHU</a></p>
-    </div>
+    <div class="dropdown">
+      <p style="letter-spacing:3px; overflow:hidden;"><a href="#" onclick="return false">GALLERY</a></p>
+        <div class="dropdown-content">
+          <a href="Pikachu.html">PIKACHU</a>
+          <a href="Gundam.html">GUNDAM</a>
+          <a href="#">FOOD</a>
+        </div>
+  </div>
 </div>
 
-<br>
-<br>
-<br>
-<br>
-<br>
 
 <div class="photo">
     <img src="images/trumpetheadshot2.jpg" alt="Headshot" style="max-width:313px; width: 40%; max-height:469.54px; height: 40%">
