--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
         margin-left: auto;
         margin-right: auto;
         max-width: 50rem;
+        height:6.7rem;
     }
     div.menu div {
-        width:20%;  
+        width:25%;
         float:left;
     }
     a:link {
@@ -58,13 +59,6 @@
       color:rgb(168, 168, 168);
       letter-spacing: 5px
     }
-    p.menu {
-      font-family: verdana;
-      font-size: 11px;
-      text-align: center;
-      letter-spacing: 3px;
-      overflow: hidden;
-    }
     .upcoming {
       font-family: verdana;
       font-size: 1.2rem;
@@ -82,6 +76,51 @@
       font-size: 13px;
       color: rgb(120, 120, 120);
       max-width: 69rem;
+    }
+    
+
+
+    
+    .dropbtn {
+      font-family: verdana;
+      font-size: 11px;
+      text-align: center;
+      letter-spacing: 3px;
+      overflow: hidden;
+      color: #646464;
+      position: relative;
+    }
+
+    .dropdown {
+      position: relative;
+      display: inline-block;
+    }
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      left: 32.2%;
+      right: auto;
+    }
+
+    .dropdown-content a {
+      font-family: verdana;
+      font-size: 11px;
+      position: relative;
+      letter-spacing: 3px;
+      display:block;
+      line-height: 1.4rem;
+    }
+
+    .dropdown-content a:hover {
+      background-color: transparent;
+      text-decoration: none;
+    }
+
+    .dropdown:hover .dropdown-content {
+      background-color: white;
+      text-decoration: none;
+      display:block;
     }
 </style>
 </head>
@@ -103,30 +142,26 @@
 
 <div class="menu">
     <div>
-        <p class="menu"><a href="biography.html">BIOGRAPHY</a></p>
+        <p style="letter-spacing:3px; overflow:hidden;"><a href="biography.html">BIOGRAPHY</a></p>
     </div>
 
     <div>
-        <p class="menu"><a href="media.html">MEDIA</a></p>
+        <p style="letter-spacing:3px; overflow:hidden;"><a href="media.html">MEDIA</a></p>
     </div>
 
     <div>
-        <p class="menu"><a href="blog.html">BLOG</a></p>
+        <p style="letter-spacing:3px; overflow:hidden;"><a href="contact.html">CONTACT</a></p>
     </div>
 
-    <div>
-        <p class="menu"><a href="contact.html">CONTACT</a></p>
-    </div>
-
-    <div>
-      <p class="menu"><a href="Pikachu.html">PIKACHU</a></p>
+    <div class="dropdown">
+        <p style="letter-spacing:3px; overflow:hidden;"><a href="#" onclick="return false">GALLERY</a></p>
+          <div class="dropdown-content">
+            <a href="Pikachu.html">PIKACHU</a>
+            <a href="Gundam.html">GUNDAM</a>
+            <a href="#">FOOD</a>
+          </div>
     </div>
 </div>
-
-<br>
-<br>
-<br>
-<br>
 
 
 <img src="images/trumpetheadshot.jpg" alt="oliver trumpet picture" width="92%" style="max-width: 700px; padding-left: 1rem; padding-right: 1rem;">
