--- a/Gundam.html
+++ b/Gundam.html
@@ -205,6 +205,7 @@
     </div>
     <div class="column">
         <img src="images/gundam/sazabi2.jpeg" style="width:100%;" class="zoom">
+        <img src="images/gundam/sazabi9.jpeg" style="width:100%;" class="zoom">
         <img src="images/gundam/sazabi5.jpeg" style="width:100%;" class="zoom">
     </div>
     <div class="column">
