--- a/Food.html
+++ b/Food.html
@@ -70,7 +70,7 @@
 
 .row {
     width: 92%;
-    max-width: 1000px;
+    max-width: 1160px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -187,8 +187,8 @@
       <p style="letter-spacing:3px; overflow:hidden;"><a href="#" onclick="return false">GALLERY</a></p>
         <div class="dropdown-content">
           <a href="Pikachu.html">PIKACHU</a>
-          <a href="Gundam.html" style="color:#b60500;">GUNDAM</a>
-          <a href="Food.html">FOOD</a>
+          <a href="Gundam.html">GUNDAM</a>
+          <a href="Food.html" style="color:#b60500;">FOOD</a>
         </div>
   </div>
 </div>
@@ -196,78 +196,47 @@
 
 
 <div class="row">
-    <div style="font-family: verdana; width: 92%; max-width: 1000px; text-align: left; margin: auto;">
-        <h2>RG Sazabi (Aug 2024)</h2>
+    <div class="column">
+        <img src="images/food/food5.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food10.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food31.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food16.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food24.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food27.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food35.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food33.jpeg" style="width:100%;" class="zoom">
     </div>
     <div class="column">
-        <img src="images/gundam/sazabi1.jpeg" style="width:100%;" class="zoom">
-        <img src="images/gundam/sazabi6.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food2.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food32.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food18.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food26.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food34.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food30.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food3.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food22.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food20.jpeg" style="width:100%;" class="zoom">
     </div>
     <div class="column">
-        <img src="images/gundam/sazabi2.jpeg" style="width:100%;" class="zoom">
-        <img src="images/gundam/sazabi9.jpeg" style="width:100%;" class="zoom">
-        <img src="images/gundam/sazabi5.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food44.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food7.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food19.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food23.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food29.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food17.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food37.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food41.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food39.jpeg" style="width:100%;" class="zoom">
     </div>
     <div class="column">
-        <img src="images/gundam/sazabi3.jpeg" style="width:100%;" class="zoom">
-        <img src="images/gundam/sazabi7.jpeg" style="width:100%;" class="zoom">
-    </div>
-    <div class="column">
-        <img src="images/gundam/sazabi4.jpeg" style="width:100%;" class="zoom">
-        <img src="images/gundam/sazabi8.jpeg" style="width:100%;" class="zoom">
-    </div>
-</div>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<div class="row">
-    <div style="font-family: verdana; width: 92%; max-width: 1000px; text-align: left; margin: auto;">
-        <h2>RG Unicorn (Jul 2024)</h2>
-    </div>
-    <div class="column">
-        <img src="images/gundam/2unicorn1.jpeg" style="width:100%;" class="zoom">
-        <img src="images/gundam/2unicorn8.jpeg" style="width:100%;" class="zoom">
-    </div>
-    <div class="column">
-        <img src="images/gundam/2unicorn2.jpeg" style="width:100%;" class="zoom">
-        <img src="images/gundam/2unicorn6.jpeg" style="width:100%;" class="zoom">
-    </div>
-    <div class="column">
-        <img src="images/gundam/2unicorn3.jpeg" style="width:100%;" class="zoom">
-        <img src="images/gundam/2unicorn5.jpeg" style="width:100%;" class="zoom">
-    </div>
-    <div class="column">
-        <img src="images/gundam/2unicorn4.jpeg" style="width:100%;" class="zoom">
-        <img src="images/gundam/2unicorn7.jpeg" style="width:100%;" class="zoom">
-        <img src="images/gundam/2unicorn9.jpeg" style="width:100%;" class="zoom">
-    </div>
-</div>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<div class="row">
-    <div style="font-family: verdana; width: 92%; max-width: 1000px; text-align: left; margin: auto;">
-        <h2>HG Unicorn - Narrative Vers. (Jul 2023)</h2>
-    </div>
-    <div class="column">
-        <img src="images/gundam/unicorn1.jpeg" style="width:100%;" class="zoom">
-    </div>
-    <div class="column">
-        <img src="images/gundam/unicorn2.jpeg" style="width:100%;" class="zoom">
-    </div>
-    <div class="column">
-        <img src="images/gundam/unicorn3.jpeg" style="width:100%;" class="zoom">
-    </div>
-    <div class="column">
-        <img src="images/gundam/unicorn4.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food4.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food25.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food43.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food21.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food6.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food36.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food40.jpeg" style="width:100%;" class="zoom">
+        <img src="images/food/food38.jpeg" style="width:100%;" class="zoom">
     </div>
 </div>
 
