--- a/Pikachu.html
+++ b/Pikachu.html
@@ -188,7 +188,7 @@
         <div class="dropdown-content">
           <a href="Pikachu.html" style="color:#b60500;">PIKACHU</a>
           <a href="Gundam.html">GUNDAM</a>
-          <a href="#">FOOD</a>
+          <a href="Food.html">FOOD</a>
         </div>
   </div>
 </div>
