--- a/contact.html
+++ b/contact.html
@@ -205,7 +205,7 @@ input[type=submit]:hover {
         <div class="dropdown-content">
           <a href="Pikachu.html">PIKACHU</a>
           <a href="Gundam.html">GUNDAM</a>
-          <a href="#">FOOD</a>
+          <a href="Food.html">FOOD</a>
         </div>
   </div>
 </div>
