--- a/biography.html
+++ b/biography.html
@@ -170,7 +170,7 @@
         <div class="dropdown-content">
           <a href="Pikachu.html">PIKACHU</a>
           <a href="Gundam.html">GUNDAM</a>
-          <a href="#">FOOD</a>
+          <a href="Food.html">FOOD</a>
         </div>
     </div>
 </div>
