--- a/index.html
+++ b/index.html
@@ -67,6 +67,17 @@
       margin-left: auto;
       max-width: 44rem;
     }
+
+    .upcoming-section{
+      font-family: georgia;
+      font-size: 1.2rem;
+      width: 92%;
+      margin-right: auto;
+      margin-left: auto;
+      max-width: 44rem;
+      color: black;
+    }
+
     .watermark {
       width: 92%;
       margin-left: auto;
@@ -176,6 +187,51 @@
 
 <br>
 <div class="upcoming"><b>Upcoming Events</b></div>
+
+<br>
+<br>
+<br>
+
+<div class="upcoming-section">
+  <div>Solo Recital</div>
+
+  <div>
+    <p style="font-family: georgia;
+    font-size: 1rem;
+    color: black;
+    letter-spacing: 1px;
+    width: 100%;
+    text-align: left;
+    margin: auto;
+    line-height: 2rem;
+    max-width: 50rem;">Sunday, November 10th, 6:00pm(central) <br>
+    Master Class Room (Regenstein) Bienen School Of Music, Northwestern University
+    </p>
+  </div>
+
+  <div>
+    <p style="font-family: calibri;
+    font-size: 0.8rem;
+    color:#b60500;
+    letter-spacing: 1px;
+    width: 100%;
+    text-align: left;
+    margin: auto;
+    max-width: 50rem;">
+     <b>Program:</b> <br>
+     Raymond Gallois-Montbrun, Sarabande et Finale <br>
+     Anton Arensky, Concert Waltz <br>
+     Johann Friedrich Fasch, Trumpet Concerto in D Major <br>
+     Arthur Honegger, Intrada <br>
+     Vladimir Peskin, Concert Allegro from Trumpet Concerto No. 2 </p>
+  </div>
+<br>
+  <div>
+    <a href="https://www.music.northwestern.edu/events/oliver-zhang-trumpet?eventdate=1731283200" target="_blank" style="line-height: 2rem;"><b>Livestream Link</b></a>
+  </div>
+
+</div>
+
 
 
 <br>
