--- a/index.html
+++ b/index.html
@@ -72,10 +72,16 @@
       font-family: georgia;
       font-size: 1.2rem;
       width: 92%;
+      max-width: 44rem;
       margin-right: auto;
       margin-left: auto;
-      max-width: 44rem;
       color: black;
+      align-items: center;
+      text-align: center;
+      border-color: black;
+      background-color: #ececec;
+      padding: 10px;
+      border-width: 1px;
     }
 
     .watermark {
@@ -192,27 +198,30 @@
 <br>
 <br>
 
-<div class="upcoming-section">
-  <div>Solo Recital</div>
-
+<div class="upcoming-section">  
+  <div style="font-family: georgia; font-size: 2rem;">Sophomore Solo Recital</div>
+<br>
   <div>
     <p style="font-family: georgia;
     font-size: 1rem;
     color: black;
     letter-spacing: 1px;
-    width: 100%;
     text-align: left;
     margin: auto;
-    line-height: 2rem;
-    max-width: 50rem;">Sunday, November 10th, 6:00pm(central) <br>
-    Master Class Room (Regenstein) Bienen School Of Music, Northwestern University
-    </p>
+    line-height: 2rem;"><b>Sunday, November 10th, 6:00pm(central)</b></p>
+    <p style="font-family: georgia;
+    font-size: 0.9rem;
+    color: black;
+    letter-spacing: 1px;
+    text-align: left;
+    margin: auto;
+    line-height: 2rem;">Master Class Room (Regenstein) Bienen School Of Music, Northwestern University</p>
   </div>
-
+  <br>
   <div>
-    <p style="font-family: calibri;
+    <p style="font-family: gill sans;
     font-size: 0.8rem;
-    color:#b60500;
+    color:#000000;
     letter-spacing: 1px;
     width: 100%;
     text-align: left;
@@ -227,9 +236,52 @@
   </div>
 <br>
   <div>
-    <a href="https://www.music.northwestern.edu/events/oliver-zhang-trumpet?eventdate=1731283200" target="_blank" style="line-height: 2rem;"><b>Livestream Link</b></a>
+    <a href="https://www.music.northwestern.edu/events/oliver-zhang-trumpet?eventdate=1731283200" target="_blank" style="line-height: 2rem; color:#b60500"><b>Livestream Link</b></a>
   </div>
+</div>
 
+<br>
+<br>
+<br>
+
+<div class="upcoming-section">  
+  <div style="font-family: georgia; font-size: 2rem;">Northwestern University Symphony Orchestra</div>
+<br>
+  <div>
+    <p style="font-family: georgia;
+    font-size: 1rem;
+    color: black;
+    letter-spacing: 1px;
+    text-align: left;
+    margin: auto;
+    line-height: 2rem;"><b>Saturday, November 2nd, 7:30pm(central)</b></p>
+    <p style="font-family: georgia;
+    font-size: 0.9rem;
+    color: black;
+    letter-spacing: 1px;
+    text-align: left;
+    margin: auto;
+    line-height: 2rem;">Pick-Staiger Hall, Bienen School Of Music, Northwestern University</p>
+  </div>
+  <br>
+  <div>
+    <p style="font-family: gill sans;
+    font-size: 0.8rem;
+    color:#000000;
+    letter-spacing: 1px;
+    width: 100%;
+    text-align: left;
+    margin: auto;
+    max-width: 50rem;">
+     <b>Program:</b> <br>
+     John Adams, Short Ride in a Fast Machine <br>
+     Vivan Fung, Prayer <br>
+     Gustav Mahler, Symphony No. 5 in C-sharp Minor </p>
+  </div>
+<br>
+  <div>
+    <a href="https://www.music.northwestern.edu/events/northwestern-university-symphony-orchestra" target="_blank" style="line-height: 2rem; color:#b60500"><b>More Info</b></a>
+  </div>
 </div>
 
 
